--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-intersection-observer": "^9.5.2",
     "react-type-animation": "^3.1.0",
     "styled-components": "^6.0.8",
-    "three": "^0.146.0"
+    "three": "^0.146.0",
+    "zustand": "^4.4.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
