--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-three/fiber": "^8.13.0",
     "@splinetool/loader": "^0.9.455",
     "@splinetool/r3f-spline": "^1.0.2",
+    "chart.js": "^4.4.0",
     "framer-motion": "^10.12.16",
     "framer-motion-3d": "^10.12.16",
     "gsap": "^3.12.0",
@@ -26,9 +27,11 @@
     "lerp": "^1.0.3",
     "leva": "^0.9.34",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.5.2",
     "react-type-animation": "^3.1.0",
+    "react-xarrows": "^2.0.2",
     "styled-components": "^6.0.8",
     "three": "^0.146.0",
     "zustand": "^4.4.1"
