fix: trying to make model load faster

--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "@react-three/fiber": "^8.13.0",
     "@splinetool/loader": "^0.9.455",
     "@splinetool/r3f-spline": "^1.0.2",
+    "@splinetool/react-spline": "^2.2.6",
+    "@splinetool/runtime": "^0.9.506",
     "chart.js": "^4.4.0",
+    "file-saver": "^2.0.5",
     "framer-motion": "^10.12.16",
     "framer-motion-3d": "^10.12.16",
     "gsap": "^3.12.0",
