--- a/package.json
+++ b/package.json
@@ -33,10 +33,13 @@
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
     "react-intersection-observer": "^9.5.2",
     "react-nice-scroll": "^1.0.0",
     "react-type-animation": "^3.1.0",
     "react-xarrows": "^2.0.2",
+    "semantic-ui-css": "^2.5.0",
+    "semantic-ui-react": "^2.1.4",
     "styled-components": "^6.0.8",
     "three": "^0.146.0",
     "vite-plugin-remove-console": "^2.1.1",
