--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@splinetool/r3f-spline": "^1.0.2",
     "@splinetool/react-spline": "^2.2.6",
     "@splinetool/runtime": "^0.9.506",
+    "activity-detector": "^3.0.0",
     "chart.js": "^4.4.0",
     "file-saver": "^2.0.5",
     "framer-motion": "^10.12.16",
@@ -36,6 +37,7 @@
     "react-icons": "^4.12.0",
     "react-intersection-observer": "^9.5.2",
     "react-nice-scroll": "^1.0.0",
+    "react-sound": "^1.2.0",
     "react-type-animation": "^3.1.0",
     "react-xarrows": "^2.0.2",
     "semantic-ui-css": "^2.5.0",
