feat: updating route for new domain

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "lamina": "^1.1.23",
     "lerp": "^1.0.3",
     "leva": "^0.9.34",
+    "lodash.debounce": "^4.0.8",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
