--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "lerp": "^1.0.3",
     "leva": "^0.9.34",
     "lodash.debounce": "^4.0.8",
+    "mouse-position": "^2.1.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
