--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
     "@egstad/detect-scroll": "^1.0.11",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-brands-svg-icons": "^6.4.2",
+    "@fortawesome/free-regular-svg-icons": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/icons-material": "^5.14.11",
     "@mui/material": "^5.14.11",
     "@mui/styled-engine-sc": "^5.14.11",
@@ -25,6 +30,7 @@
     "activity-detector": "^3.0.0",
     "chart.js": "^4.4.0",
     "file-saver": "^2.0.5",
+    "font-awesome-icons": "^1.6.0",
     "framer-motion": "^10.12.16",
     "framer-motion-3d": "^10.12.16",
     "gsap": "^3.12.0",
