--- a/jsconfig.paths.json
+++ b/jsconfig.paths.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "paths": {
+      "@pages": ["./src/pages"],
       "@components": ["./src/components"],
       "@contexts": ["./src/contexts"],
       "@constants": ["./src/constants"]
