--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "rm -rf build & vite build",
-    "prod:build": "vite build",
+    "build:prod": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
