fix: updating aliases

--- a/jsconfig.paths.json
+++ b/jsconfig.paths.json
@@ -1,10 +1,10 @@
 {
   "compilerOptions": {
     "paths": {
-      "@pages": ["./src/pages"],
-      "@components": ["./src/components"],
-      "@contexts": ["./src/contexts"],
-      "@constants": ["./src/constants"]
+      "pages": ["./src/pages"],
+      "components": ["./src/components"],
+      "contexts": ["./src/contexts"],
+      "enums": ["./src/enums"]
     }
   }
 }
